To get all suggestions used inheritance

--- a/src/pages/suggestion/suggestion.html
+++ b/src/pages/suggestion/suggestion.html
@@ -10,7 +10,7 @@
     <button ion-fab (click)="newSuggestion()" color="fab"> <ion-icon name="add"></ion-icon></button>
   </ion-fab>
   <ion-list>
-    <ion-item-sliding *ngFor="let suggestion of suggestions" #slidingItem >
+    <ion-item-sliding *ngFor="let suggestion of complaints" #slidingItem >
       <a ion-item detail-push detail-none href="#" (click)="viewSuggestion(suggestion)" [style.border-left-color]="suggestion.statusColor">
         <nl-list-view [complaint]="suggestion"></nl-list-view>
       </a>
