Showing empty message when no suggestion

--- a/src/pages/suggestion/suggestion.html
+++ b/src/pages/suggestion/suggestion.html
@@ -23,7 +23,7 @@
     </ion-item-sliding>
   </ion-list>
   <ion-list>
-    <ion-item *ngIf="EmptySuggestion">
+    <ion-item *ngIf="EmptyComplaints">
       <h3> NO SUGGESTIONS </h3>
     </ion-item>
   </ion-list>
